# obc-system

./: CM4_installation_instrcution.md  RB_installation_intruction.md  README.md  ansible.cfg  inventory.ini  pyproject.toml
playbooks/: antenna.yml  can-logger.yml  mosquitto.yml  ping.yml  poetry.yml  setup_system.yml  tle-tracker.yml
roles/ssh-setup/files/: juliusz.pub
roles/ssh-setup/tasks/: main.yml
roles/system-update/tasks/: main.yml  sudo_config.yml  update_apt.yml
